--- a/site/core/blank.html
+++ b/site/core/blank.html
@@ -6,7 +6,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Temp | BareCSS</title>
+    <title>[untitled]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -43,31 +43,44 @@
       }
     </style>
     <style>/* your style goes here */</style>
-    <style></style>
   </head>
   <body>
-    <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Temporary lab stuff.</span>
+    <header class="_container">
+      <pre>Hello, there.
+
+This is a placeholder to get you started.
+
+Copy the code from 'core/blank' to create your own page.
+
+<a href="./">Back</a>
+</pre>
     </header>
-    <hr class="_mb0"/>
-    <div id="main_nav">
-      <div class="_color_2">
-        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
-        </nav>
-      </div>
-    </div>
-    <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2 _active" href="/barecss/site/lab/temp.html">Temp</a>
-      </nav>
-      <hr>
-      <article style="padding-bottom:1.8rem">
-        <section class="_container">
-          <pre class="_scrollable pre">// Temporary lab stuff that will be implemented in the future.</pre>
-        </section>
-        <section class="_container">
-          <pre class="pre"></pre>
-        </section>
+      <article class="_container">
+        <pre>
+name             = BareCSS
+version          = 0.1.0.alpha
+
+author           = Techie Joe
+today            = Mon May 26 2025
+year             = 2025
+license          = MIT
+
+title            = [untitled]
+description      = [undescribed]
+
+layout           = main/_html
+pageid           = core/blank
+siteUrl          = https://techiejoe.github.io/barecss/core/blank.html
+homeUri          = /barecss/site/
+
+og_url           = https://techiejoe.github.io/barecss/core/blank.html?utm_source=homescreen
+og_type          = website
+og_title         = [untitled]
+og_description   = [undescribed]
+og_image         = undefined
+og_imageAlt      = undefined
+</pre>
       </article>
       <aside id="_asides"></aside>
     </main>
