--- a/site/core/text.html
+++ b/site/core/text.html
@@ -6,7 +6,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Temp | BareCSS</title>
+    <title>Details | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -47,7 +47,7 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Temporary lab stuff.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Styling details and summary elements.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
@@ -58,16 +58,16 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2 _active" href="/barecss/site/lab/temp.html">Temp</a>
+      <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/image.html">Image</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/button.html">Button</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
-        <section class="_container">
-          <pre class="_scrollable pre">// Temporary lab stuff that will be implemented in the future.</pre>
+        <section class="_container"><span class="_u_dotted">Dotted</span> 
+          <span class="_u_dashed">Dashed</span> 
+          <span class="_u_double">Double</span> 
+          <span class="_u_wavy">Wavy</span> 
         </section>
-        <section class="_container">
-          <pre class="pre"></pre>
-        </section>
+        <hr>
       </article>
       <aside id="_asides"></aside>
     </main>
