--- a/site/index.html
+++ b/site/index.html
@@ -60,22 +60,21 @@
       header._container {
         max-width:60em;
         padding-left:.5rem;padding-right:.5rem;
-        margin-left:auto;margin-right:auto;
       }
     </style>
   </head>
   <body>
-    <header class="_container"><span>
+    <header class="_container _center_m _table"><span>
         <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Simple framework for a clean interface.</span>
     </header>
-    <hr class="_mb0"/>
+    <hr class="_m0"/>
     <div id="main_nav">
       <div class="_color_2">
         <nav class="_container"><a class="_a11" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
-    <hr class="_mt0"/>
+    <hr class="_m0"/>
     <main>
       <article class="_container">
         <pre class="_scrollable pre">Name         : BareCSS
@@ -90,7 +89,7 @@ LICENSE      : MIT
 URL          : https://techiejoe.github.io/barecss/index.html
 URI          : /barecss/site/ 
 
-Last updated : Wed Jun 11 2025</pre>
+Last updated : Thu Jun 12 2025</pre>
       </article>
       <aside id="_asides"></aside>
     </main>
