--- a/site/lab/index.html
+++ b/site/lab/index.html
@@ -49,14 +49,14 @@
     <header class="_container"><a href="/barecss/site/">
         <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Laboratory for upcoming features and upgrades.</span>
     </header>
-    <hr class="_mb0"/>
+    <hr class="_m0"/>
     <div id="main_nav">
       <div class="_color_2">
         <nav class="_container"><a class="_a11" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11 _active" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
-    <hr class="_mt0"/>
+    <hr class="_m0"/>
     <main>
       <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2" href="/barecss/site/lab/temp.html">Temp</a>
       </nav>
